--- a/bash/levels/103/config
+++ b/bash/levels/103/config
@@ -4,6 +4,6 @@ R2LRN_TASK="
 There is a file named 'bin' in this folder.
 What address is the open() symbol imported at?
 "
-R2LRN_ANSWER="0x00401960"
+R2LRN_ANSWER="0x0*401960"
 R2LRN_HINT="afl~imp.open[0]"
 
