--- a/bash/levels/2/config
+++ b/bash/levels/2/config
@@ -1,5 +1,5 @@
 R2LRN_VERSION=1
-R2LRN_NAME="Switching levels"
+R2LRN_NAME="r2lrn intro: Switching levels"
 R2LRN_TASK="
 Just skip this level and go to next one.
 There is no solving this.
