--- a/bash/levels/3/config
+++ b/bash/levels/3/config
@@ -1,5 +1,5 @@
 R2LRN_VERSION=1
-R2LRN_NAME="Listing files"
+R2LRN_NAME="r2lrn intro: Listing files"
 R2LRN_TASK="
 How many files are in this directory?
 (hidden files don't count)
