added level template

--- a/bash/levels/1/config
+++ b/bash/levels/1/config
@@ -2,8 +2,10 @@ R2LRN_VERSION=1
 R2LRN_NAME="r2lrn intro: Help me!"
 R2LRN_TASK="
 This is an easy one. Learn to use r2lrn first.
+
 Type 'hint' to get hint.
-If you need/want to enter answer manually type \"answer YOUR_ANSWER\"
+If you need/want to enter answer manually type \"answer YOUR_ANSWER\",
+ for example \"answer 123\".
 
 What's the meaning of life, universe, and everything?
 "
