level naming convention created: 00x - r2lrn, 1xx - r2 tools, 2xx - r2, 3xx - r2 with binaries

--- a/bash/levels/302/config
+++ b/bash/levels/302/config
@@ -7,3 +7,4 @@ How many functions can radare2 identify in the file doing the deepest possible a
 R2LRN_ANSWER="113"
 R2LRN_HINT="aflc"
 
+R2LRN_NEXTLEVEL=351
